--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </div>
                 <div id="current">
                     <h4 id="h4future"> </h4>
-
+                    <div id="currentborder"></div>
                     <div class="content">
                         <h1 id="h1">2019</h1>
                         <h2 class="orlando2" id="h2">Orlando</h2>
