--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <title>HCI Demo</title>
     <script src="script/jquery.js"></script>
+    <link rel="stylesheet" type="text/css" href="styles/styles.css" />
 
     <script type="text/javascript" src="script/script.js"></script>
 
 
-    <link rel="stylesheet" type="text/css" href="styles/styles.css" />
 </head>
 
 <body>
@@ -102,7 +102,7 @@
             </div>
         </div>
         <div id="upperContent">
-            <span id="send"></span>
+            <span id="send"><span id="stream"></span></span>
             <div id="fly">
 
             </div>
@@ -139,7 +139,8 @@
                         <script src="script/earth.js"></script>-->
             </div>
             <h5 id="desc"></h5>
-            <!-- <span class="dot" id="dot2world"></span>-->
+            <!--<span id="descshaddow"></span>
+             <span class="dot" id="dot2world"></span>-->
 
         </div>
 
