--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <title>HCI Demo</title>
     <script src="script/jquery.js"></script>
+    <script type="text/javascript" src="script/jquery-ui.js"></script>
+
     <link rel="stylesheet" type="text/css" href="styles/styles.css" />
 
     <script type="text/javascript" src="script/script.js"></script>
@@ -19,6 +21,7 @@
     <div id="main">
         <div id="timeline">
             <div id="timelineshadow">
+                <div id="timelineshadowmap"></div>
                 <div id="past">
 
                     <div class="container ">
@@ -78,6 +81,8 @@
                         </div>
 
                     </div>
+                    <div id="pastborderdashed"></div>
+
                     <div id="pastborder"></div>
                 </div>
                 <div id="current">
@@ -139,6 +144,8 @@
                         <script src="script/earth.js"></script>-->
             </div>
             <h5 id="desc"></h5>
+            <div id="timelineshadowdesc"></div>
+
             <!--<span id="descshaddow"></span>
              <span class="dot" id="dot2world"></span>-->
 
