Paper plane total fix

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <h4 id="h4future"> </h4>
                     <div id="currentborder"></div>
                     <div class="content">
-                        <h1 id="h1">2019</h1>
+                        <h1>2019</h1>
                         <h2 class="orlando2" id="h2">Orlando</h2>
                         <span class="dot" id="dotfuture"></span>
                     </div>
@@ -98,7 +98,7 @@
                 <div id="future">
                     <h4 id="h4future"> </h4>
                     <div class="content" id="contentfuture">
-                        <h1 id="h1">2020</h1>
+                        <h1>2020</h1>
                         <h2 class="copenhagen" id="h2">Copenhagen</h2>
                         <span class="dot" id="dotfuture"></span>
                     </div>
@@ -108,16 +108,14 @@
         </div>
         <div id="upperContent">
             <span id="send"><span id="stream"></span></span>
-            <div id="fly">
 
-            </div>
 
             <img id="mainimg">
             <h6>Beijing</h6>
             <div id="globe">
 
                 <section class="stage">
-
+                    <div id="ballshadow"></div>
                     <figure class="ball">
                         <!--   <svg class="spinner" xmlns="http://www.w3.org/2000/svg" x="-268.2" y="511.1" viewBox="-2794 0 2000.2 1999.5">
                                         <circle cx="-1793.9" cy="999.8" r="611.2" fill="#fca311"/>
@@ -146,8 +144,7 @@
             <h5 id="desc"></h5>
             <div id="timelineshadowdesc"></div>
 
-            <!--<span id="descshaddow"></span>
-             <span class="dot" id="dot2world"></span>-->
+
 
         </div>
 
