--- a/index.html
+++ b/index.html
@@ -224,26 +224,12 @@
 
                 <section class="stage">
                     <div id="ballshadow"></div>
-                    <figure class="ball">
-                        <!--   <svg class="spinner" xmlns="http://www.w3.org/2000/svg" x="-268.2" y="511.1" viewBox="-2794 0 2000.2 1999.5">
-                                        <circle cx="-1793.9" cy="999.8" r="611.2" fill="#fca311"/>
-                                        <circle cx="-2238.4" cy="555.4" r="555.6" fill="#fff" clip-path="url(#clip)" transform="translate(444.495 448.4)"/>
-                                        <path class="logo" fill="#fca311" d="M-1460.5 310.8l181 266.7 150-96.8-323-165.8 382 137 99-41zm334.3 175.2l-53.8 34.6 101 52.7z"/>
-                        </svg>
+                    <figure class="ball" id="glb1">
 
-
-                            
-                        <svg class="c-dashed-line" width="80" height="40" xmlns="http://www.w3.org/2000/svg">
-                                        <defs>
-                                                <path id="c-dashed-line" d="M875 0s5 120-435 120-435 120-435 120"/>
-                                        </defs>
-                                         A solid green line that we'll animate 
-                                        <use class="c-dashed-line__path" xlink:href="#c-dashed-line"/>
-                                         A dashed white line that sits on top of the solid green line 
-                                        <use class="c-dashed-line__dash" xlink:href="#c-dashed-line"/>
-                                </svg>-->
                     </figure>
+                    <figure class="ball" id="glb2">
 
+                    </figure>
                 </section>
 
                 <!--<div id="container" ></div>
